--- a/auth_app/templates/registration/top.html
+++ b/auth_app/templates/registration/top.html
@@ -17,10 +17,10 @@
           <!-- 2025/11/22 機能改善 -->
           <div class="update-item mb-4">
             <div class="d-flex align-items-center mb-2">
-              <span class="badge badge-info mr-2">2025/11/15</span>
+              <span class="badge badge-info mr-2">2025/11/25</span>
               <h5 class="mb-0">機能改善</h5>
             </div>
-            <ul class="list-unstyled ml-4">
+            <ul class="list-unstyled ml-2">
               <li class="mb-2"><i class="fas fa-chart-line text-primary"></i> アカウント認証機能を強化しました。</li>
               <li class="mb-2"><i class="fas fa-paint-brush text-info"></i> 一部文言の変更を行いました。</li>
               <li class="mb-2"><i class="fas fa-paint-brush text-info"></i> 一部のデザインを変更しました。</li>
@@ -33,7 +33,7 @@
               <span class="badge badge-info mr-2">2025/11/15</span>
               <h5 class="mb-0">不要機能廃止 & 新機能公開</h5>
             </div>
-            <ul class="list-unstyled ml-4">
+            <ul class="list-unstyled ml-2">
               <li class="mb-2"><i class="fas fa-minus-circle text-danger"></i> 「センサーを用いたグラフ機能」を廃止しました。</li>
               <li class="mb-2"><i class="fas fa-minus-circle text-danger"></i> 「動画共有機能」を廃止しました。</li>
               <li class="mb-2"><i class="fas fa-plus-circle text-success"></i> 「タスク管理機能」を公開しました。</li>
@@ -52,7 +52,7 @@
               <span class="badge badge-info mr-2">2025/10/30</span>
               <h5 class="mb-0">新機能公開</h5>
             </div>
-            <ul class="list-unstyled ml-4">
+            <ul class="list-unstyled ml-2 ml-4">
               <li class="mb-2"><i class="fas fa-plus-circle text-success"></i> 「動画共有機能」を公開しました。</li>
             </ul>
           </div>
@@ -65,7 +65,7 @@
               <span class="badge badge-info mr-2">2025/10/30</span>
               <h5 class="mb-0">新機能公開</h5>
             </div>
-            <ul class="list-unstyled ml-4">
+            <ul class="list-unstyled ml-2 ml-4">
               <li class="mb-2"><i class="fas fa-plus-circle text-success"></i> 「センサーを用いたグラフ機能」を実装しました。</li>
             </ul>
           </div>
@@ -78,7 +78,7 @@
               <span class="badge badge-info mr-2">2024/06/02</span>
               <h5 class="mb-0">サイト公開</h5>
             </div>
-            <ul class="list-unstyled ml-4">
+            <ul class="list-unstyled ml-2 ml-4">
               <li class="mb-2"><i class="fas fa-rocket text-warning"></i> サイトを公開しました。</li>
               <li class="mb-2"><i class="fas fa-plus-circle text-success"></i> 「支出管理機能」を追加しました。</li>
             </ul>
