--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -3,7 +3,7 @@
 <!doctype html>
 <html lang="ja">
   <head>
-    <title>炭水化物</title>
+    <title>Life management</title>
     
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="{% static 'app/styles.css' %}">
     <link rel="stylesheet" href="{% static 'app/footer.css' %}">
+    <link rel="icon" type="image/svg+xml" href="{% static 'app/rice-icon.svg' %}">
+    <link rel="apple-touch-icon" href="{% static 'app/rice-icon.svg' %}">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
