--- a/auth_app/templates/registration/_header.html
+++ b/auth_app/templates/registration/_header.html
@@ -1,7 +1,7 @@
 <!-- ナビバー -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="d-flex justify-content-center align-items-center">
-      <i class="fas fa-2x fa-coffee text-white"></i>
+      <i class="fas fa-2x fa-burger text-white"></i>
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -22,13 +22,22 @@
 
         {% else %}
           <li class="nav-item m-1">
-            <a class="nav-link" href="{% url 'expense_list' %}">ホーム</a>
+            <a class="nav-link" href="{% url 'expense_list' %}">家計簿</a>
+          </li>
+          <li class="nav-item m-1">
+            <a class="nav-link" href="{% url 'task_list' %}">スケジュール</a>
+          </li>
+          <li class="nav-item m-1">
+            <a class="nav-link" href="{% url 'memo_list' %}">メモ</a>
+          </li>
+          <li class="nav-item m-1">
+            <a class="nav-link" href="{% url 'shopping_list' %}">買いものリスト</a>
           </li>
           <li class="nav-item m-1">
             <a class="nav-link" href="{% url 'my_page' user.pk %}">マイページ</a>
           </li>
           <li class="nav-item m-1">
-            <a class="nav-link" href="{% url 'logout' %}">ログアウト</a>
+            <a class="nav-link" href="/logout/">ログアウト</a>
           </li>
         {% endif %}
       </ul>
