--- a/auth_app/templates/registration/login.html
+++ b/auth_app/templates/registration/login.html
@@ -23,7 +23,13 @@
             
             {% for field in form %}
               <div class="form-group">
-                <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+                <label for="{{ field.id_for_label }}" class="form-label">
+                  {% if field.name == 'username' or field.name == 'email' %}
+                    メールアドレス
+                  {% else %}
+                    {{ field.label }}
+                  {% endif %}
+                </label>
                 <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_label }}" name="{{ field.name }}">
                 {% if field.errors %}
                   <div class="invalid-feedback">
