アイコンの変更

--- a/app/templates/app/expenses/list.html
+++ b/app/templates/app/expenses/list.html
@@ -174,15 +174,15 @@
         
         <!-- モバイル: 棒グラフ（全幅） -->
         <div class="col-12 d-md-none mb-2">
-            <div style="height: 200px;">
-                <canvas id="expenseBarChartMobile" class="chart-canvas"></canvas>
+            <div style="height: 250px; position: relative;">
+                <canvas id="expenseBarChartMobile" class="chart-canvas" style="height: 300px !important;"></canvas>
             </div>
         </div>
         
         <!-- モバイル: 折れ線グラフ（全幅） -->
         <div class="col-12 d-md-none mb-2">
-            <div style="height: 200px;">
-                <canvas id="balanceLineChartMobile" class="chart-canvas"></canvas>
+            <div style="height: 250px; position: relative;">
+                <canvas id="balanceLineChartMobile" class="chart-canvas" style="height: 250px !important;"></canvas>
             </div>
         </div>
     </div>
