--- a/app/templates/app/_header.html
+++ b/app/templates/app/_header.html
@@ -1,7 +1,8 @@
+{% load static %}
 <!-- ナビバー -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="d-flex justify-content-center align-items-center">
-      <i class="fas fa-2x fa-burger text-white"></i>
+      <img src="{% static 'app/rice-icon-mono.png' %}" alt="Menu" style="width: 64px; height: 64px;">
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
